--- a/graphy/templates/pvis_graph_file.html
+++ b/graphy/templates/pvis_graph_file.html
@@ -50,8 +50,8 @@
         
 
         // parsing and collecting nodes and edges from the python
-        nodes = new vis.DataSet([{"id": 3, "label": "3", "shape": "dot"}, {"id": 5, "label": "5", "shape": "dot"}, {"id": 2, "label": "2", "shape": "dot"}]);
-        edges = new vis.DataSet([{"from": 3, "to": 5}, {"from": 2, "to": 3}]);
+        nodes = new vis.DataSet([{"id": 1, "label": "1", "shape": "dot"}, {"id": 2, "label": "2", "shape": "dot"}, {"id": 3, "label": "3", "shape": "dot"}, {"id": 4, "label": "4", "shape": "dot"}, {"id": 5, "label": "5", "shape": "dot"}, {"id": 6, "label": "6", "shape": "dot"}, {"id": 7, "label": "7", "shape": "dot"}, {"id": 8, "label": "8", "shape": "dot"}]);
+        edges = new vis.DataSet([{"from": 1, "to": 2}, {"from": 2, "to": 3}, {"from": 3, "to": 4}, {"from": 4, "to": 5}, {"from": 5, "to": 1}, {"from": 3, "to": 5}, {"from": 3, "to": 6}, {"from": 2, "to": 7}, {"from": 7, "to": 8}]);
 
         // adding nodes and edges to the graph
         data = {nodes: nodes, edges: edges};
